added an icon for the app, got rid of nicolas, and fixed rss to reload after every couple plays

--- a/manifest.json
+++ b/manifest.json
@@ -2,7 +2,7 @@
     "BundleType": "Application",
     "BundleIdentifier": "irsspotify",
     "AppIcon": {
-        "36x18": "tutorial.png"
+        "36x18": "irssi-icon.png"
     },
     "AppName": {
         "en": "IrsSpotify"
